Java 21 deprecation fixes